--- a/index.html
+++ b/index.html
@@ -57,8 +57,20 @@
 						<img src="./public/s3_5.jpg">
 					</div>
 				</div>
-				<div id="web_04" class="contentbox">
+				<div fade-in-animation="" id="web_04" class="contentbox">
 					<img src="./public/web_04.jpg">
+					<div class="absolute_content" ng-model="s4_1" id="s4_1">
+						<img src="./public/s4_1.jpg">
+					</div>
+					<div class="absolute_content" ng-model="s4_2" id="s4_2">
+						<img src="./public/s4_2.jpg">
+					</div>
+					<div class="absolute_content" ng-model="s4_3" id="s4_3">
+						<img src="./public/s4_3.jpg">
+					</div>
+					<div class="absolute_content" ng-model="s4_4" id="s4_4">
+						<img src="./public/s4_4.jpg">
+					</div>
 				</div>
 				<div id="web_05" class="contentbox">
 					<img src="./public/web_05.jpg">
