--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				<div id="web_14" class="contentbox">
 					<img src="./public/web_14.jpg">
 					<div class="absolute_content" ng-model="s14_1" id="s14_1">
-						<a href="https://shop.dyson.hk/zh-HK/fans-and-purifiers/purifiers" target="_blank">
+						<a href="https://bit.ly/2UOqeJt" target="_blank">
 							<img src="./public/s14_1.png">
 						</a>
 					</div>
@@ -324,7 +324,7 @@
 				<div id="mobile_13" class="contentbox">
 					<img src="./public/mobile_13.jpg">
 					<div class="absolute_content" ng-model="mobile_13_1" id="mobile_13_1">
-						<a href="https://shop.dyson.hk/zh-HK/fans-and-purifiers/purifiers" target="_blank">
+						<a href="https://bit.ly/2UOqeJt" target="_blank">
 							<img src="./public/s14_1.png">
 						</a>
 					</div>
