change button to static

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					<img src="./public/web_14.jpg">
 					<div class="absolute_content" ng-model="s14_1" id="s14_1">
 						<a href="https://bit.ly/2UOqeJt" target="_blank">
-							<img src="./public/s14_1.gif">
+							<img src="./public/s14_1.png">
 						</a>
 					</div>
 				</div>
@@ -331,7 +331,7 @@
 					<img src="./public/mobile_13.jpg">
 					<div class="absolute_content" ng-model="mobile_13_1" id="mobile_13_1">
 						<a href="https://bit.ly/2UOqeJt" target="_blank">
-							<img src="./public/s14_1.gif">
+							<img src="./public/s14_1.png">
 						</a>
 					</div>
 				</div>
